[gd_scene load_steps=5 format=2]

[ext_resource path="res://worlds/worldSelect/objects/posters/poster1.png" type="Texture" id=1]
[ext_resource path="res://worlds/worldSelect/objects/posters/poster.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Poster1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=3]
resource_name = "animation"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Poster1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 4.8, 4.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 4, 5, 6, 7, 0, 1, 2, 1, 4, 5, 6, 7, 0, 1, 2, 1, 4, 5, 6, 9, 10, 7, 8, 9, 10, 8, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:lockPos")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.5, 4.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="poster" type="Area2D"]
script = ExtResource( 2 )

[node name="Poster1" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 11
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/animation = SubResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_poster_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_poster_area_exited"]
